# Copyright (C) 2013 Christian Dywan <christian@twotoasts.de>

macro(install_icon name cat size)
    file(GLOB FILENAME RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "${size}/${name}.*")
    install(FILES ${FILENAME} DESTINATION ${CMAKE_INSTALL_DATADIR}/icons/hicolor/${size}/${cat})
endmacro()

foreach(SIZE 16x16 22x22 32x32 128x128 256x256)
    install_icon(${MIDORI_PROJECT_NAME} apps ${SIZE})
    install_icon(extension categories ${SIZE})
    install_icon(bookmarked categories ${SIZE})
    install_icon(unbookmark categories ${SIZE})
    install_icon(home_page categories ${SIZE})
    install_icon(compactmenu categories ${SIZE})
    install_icon(download actions ${SIZE})
    install_icon(downloading actions ${SIZE})
    install_icon(refresh actions ${SIZE})
    install_icon(go_back actions ${SIZE})
    install_icon(go_forward actions ${SIZE})
    install_icon(cdos-add actions ${SIZE})
    install_icon(search actions ${SIZE})
    install_icon(setting actions ${SIZE})
    install_icon(authensite categories ${SIZE})
    install_icon(certifiedwebsite categories ${SIZE})
    install_icon(user-bookmarks-custom categories ${SIZE})
    install_icon(baidu_favicon categories ${SIZE})
    install_icon(sina categories ${SIZE})
    install_icon(sohu categories ${SIZE})
    install_icon(ifeng categories ${SIZE})
    install_icon(taobao categories ${SIZE})
#lxx, 20150202
    install_icon(allowed_location categories ${SIZE})
    install_icon(blocked_location categories ${SIZE})
    install_icon(blocked_popups categories ${SIZE})
endforeach()

